--- a/app/templates/impressum.html
+++ b/app/templates/impressum.html
@@ -1,6 +1,4 @@
 {% extends 'layout.html' %}
 {% block content %}
-
-<section class='infoblog'>
-
+<p> second lorem ipsum dolor </p>
 {% endblock content %}
