--- a/app/templates/meals.html
+++ b/app/templates/meals.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<section class='infoblog'>
+Lorem ipsum dolor.
 
-{% endblock content %}
+{%endblock content %}
