--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,50 +1,38 @@
 <html>
 <head> 
-  <title>'Spatzennest am Fahlt'</title>
-  <link type='text/css' rel='stylesheet' href={{ url_for('static', filename='spectre.css') }}>
-  <link type='text/css' rel='stylesheet' href={{ url_for('static', filename='mycss.css') }}>
+  <title>Spatzennest am Fahlt</title>
+<link type='text/css' rel='stylesheet' href={{ url_for('static', filename='style.css') }}>
 </head>
 <body>
-<header class='navbar'>
-  <section class='navbar-section'>
-    <a href={{ url_for('info') }}> Info </a>
-    <a href={{ url_for('meals') }}> Gerichte </a>
-    <a href={{ url_for('impressum') }}> Impressum </a>
-  </section>
-</header>
-  <!-- Slideshow container -->
-  <div class="slideshow-container">
-
- <!-- Full-width images with number and caption text -->
-<div class="mySlides fade">
-     <img src={{ url_for('static', filename='nature1.jpg') }} style="width:100%">
-     <div class="text">Caption Text</div>
-     </div>
-
-<div class="mySlides fade">
-     <img src={{ url_for('static', filename='nature2.jpg') }} style="width:100%">
-     <div class="text">Caption Two</div>
-     </div>
-
-<div class="mySlides fade">
-     <img src={{ url_for('static', filename='nature3.jpg') }} style="width:100%">
-     <div class="text">Caption Three</div>
-     </div>
-
-               <!-- Next and previous buttons -->
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
+<div class='container'>
+  <img class='photo' src= {{ url_for('static', filename='nature1.jpg') }}>
+  <img class='photo' src= {{ url_for('static', filename='nature2.jpg') }}>
+  <img class='photo' src= {{ url_for('static', filename='nature3.jpg') }}>
 </div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-<span class="dot" onclick="currentSlide(1)"></span>
-<span class="dot" onclick="currentSlide(2)"></span>
-<span class="dot" onclick="currentSlide(3)"></span>
-</div> 
+  <nav>
+  <ul>
+    <li class=''>
+      <a href=#><strong>Sites</strong></a>
+    </li>
+    <li class='link'>
+      <a href= {{ url_for('info') }}> Info </a>
+    </li>
+    <li class='link'>
+    <a href= {{ url_for('meals') }}> Gerichte </a>
+    </li>
+    <li class='link'>
+    <a href= {{ url_for('impressum') }}> Impressum </a>
+    </li>
+    <ul>
+  </nav>
+</div>
+</div>
+<div class='content'>
+<h1> {{ title }} </h1>
+<hr>
 {% block content %}
 {% endblock content %}
+</div>
 </body>
 <script src={{ url_for('static', filename='myjs.js') }}></script>
 </html>
