--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,6 +8,27 @@ body {
   margin-right: 300px;
 }
 
+.categories {
+  position: fixed;
+  float: left;
+  width: 20%;
+  margin-top: 90px;
+  bottom: 300px;
+  left: 90px;
+}
+
+.list {
+  list-style: none;
+}
+
+.category {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  line-height: 28px;
+  font-size: 14px;
+}
+
 h1 {
   text-align: center;
   margin-bottom: 20px;
@@ -15,16 +36,17 @@ h1 {
 
 .mealp {
   width: 400px;
-  height:  300px;
+  height: 400px;
   display: inline-block;
   float: right;
 }
 
 .meal {
-  height: 400;
+  height: 250px;
   width: 817px;
   display: block;
   margin-bottom: 10px;
+  overflow: auto;
 }
 
 .mealt {
@@ -44,7 +66,8 @@ h1 {
   border-bottom-color: #856036;
   border-right-color: #5d4426;
   */
-  position: relative; }
+  position: relative; 
+}
 
 .photo {
   position: absolute;
