forked and added static text to templates

--- a/app/templates/impressum.html
+++ b/app/templates/impressum.html
@@ -1,4 +1,18 @@
 {% extends 'layout.html' %}
 {% block content %}
-<p> second lorem ipsum dolor </p>
+<p>
+    Sie brauchen Auskunft &uuml;ber uns oder wollen eine Bestellung aufgeben, 
+    k&ouml;nnen aber gerade nicht pers&ouml;nlich bei uns vorbeischauen? <br>
+    Hier k&ouml;nnen Sie uns erreichen!
+</p>
+<br>
+<p>
+<i>
+    Addresse: Fahltskamp 33, 25421 Pinneberg  <br>
+    Telefon:  0176 859 12018 <br><br>
+    &Ouml;ffnungszeiten:<br>
+    Mo-Fr: 7:30 - 17:00<br>
+    Sa: 9:00 - 16:00
+</i>
+</p>
 {% endblock content %}
