--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -2,5 +2,36 @@
 {% block content %}
 
 <section class='infoblog'>
+<div class='meal'>
+  <p class='mealt'>
+   <i>
+    Wir sind ein kleines Establishment in der<br>
+    N&auml;he der Pinneberger Innenstadt.<br>
+    Von Montag bis Samstag servieren wir unseren <br>
+    Besuchern hausgemachten Kaffee und Kuchen, <br>
+    Br&ouml;tchen und gegen Mittag gibt es ein  <br>
+    Mittagsgericht, welches t&auml;glich frisch <br>
+    f&uuml;r Sie zubereitet wird.
+  </i>
+ </p>
+ <img class='mealp' src={{ url_for('static', filename='imgs/TeeUndKuchen.jpg') }}>
+</div>
 
+<div class='meal'>
+ <p class='mealt'>
+  <i>
+    <img class='mealp' src={{ url_for('static', filename='imgs/Interior1.JPG') }}>
+    Die R&auml;umlichkeit bietet reichlich Platz      <br>
+    f&uuml;r nette Gespr&auml;che in kleinen sowie <br>
+    grossen Gruppen. Aus angenehmer Musik und <br>
+    warmem Sitzplatz entsteht ein ruhiges <br>
+    Ambiente, in dem sie ihren Pausen <br>
+    geniessen, eine kurze Verschnaufpause <br>
+    einlegen oder ihren Tagtr&auml;umen <br>
+    nachh&auml;ngen koennen. <br>
+    <br>
+    Wir freuen uns herzlich auf Ihren Besuch.
+  </i>
+ </p>
+</div>
 {% endblock content %}
